--- a/5.-grid/grid.html
+++ b/5.-grid/grid.html
@@ -19,6 +19,7 @@
     <li><a href="#grid-areas">Grid con Áreas</a></li>
     <li><a href="#grid-implicit">Grid Implícita</a></li>
     <li><a href="#grid-flow">Flujo de la Grid</a></li>
+    <li><a href="#grid-flow-dense">Flujo denso de la Grid</a></li>
     <li><a href="#grid-layer">Grid Items en Capas (superposición)</a></li>
     <li><a href="#grid-order">Ordenamiento de Grid Items</a></li>
     <li><a href="#grid-align">Alineamiento de Grid Items</a></li>
@@ -154,28 +155,362 @@
 
   <h2 id="grid-implicit">Grid Implícita</h2>
   <a href="#top">🔝</a>
-  <section class="container grid-implicit"></section>
+  <section class="container grid-implicit">
+      <article class="item">
+          <p>Grid Item 1</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 2</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 3</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 4</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 5</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 6</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 7</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 8</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 9</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 10</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 11</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 12</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 13</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 14</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 15</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 16</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 17</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 18</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 19</p>
+      </article>
+  </section>
+
+
   <h2 id="grid-flow">Flujo de la Grid</h2>
   <a href="#top">🔝</a>
-  <section class="container grid-flow"></section>
+  <section class="container grid-flow">
+      <article class="item">
+          <p>Grid Item 1</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 2</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 3</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 4</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 5</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 6</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 7</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 8</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 9</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 10</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 11</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 12</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 13</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 14</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 15</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 16</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 17</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 18</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 19</p>
+      </article>
+  </section>
+
+
+  <h2 id="grid-flow-dense">Grid Denso de la Grid</h2>
+  <a href="#top">🔝</a>
+  <section class="container grid-flow-dense">
+    <article class="item">
+        <p>Grid Item 1</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 2</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 3</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 4</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 5</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 6</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 7</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 8</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 9</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 10</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 11</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 12</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 13</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 14</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 15</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 16</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 17</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 18</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 19</p>
+    </article>
+</section>
+  <!--article.item*19>p{Grid Item $}-->
+
+
   <h2 id="grid-layer">Grid Items en Capas (superposición)</h2>
   <a href="#top">🔝</a>
-  <section class="container grid-layers"></section>
+  <section class="container grid-layers">
+      <article class="item">
+          <p>Grid Item 1</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 2</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 3</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 4</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 5</p>
+      </article>
+  </section>
+
+  
   <h2 id="grid-order">Ordenamiento de Grid Items</h2>
   <a href="#top">🔝</a>
-  <section class="container grid-order"></section>
+  <section class="container grid-order">
+    <article class="item">
+        <p>Grid Item 1</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 2</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 3</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 4</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 5</p>
+    </article>
+  </section>
+
+
   <h2 id="grid-align">Alineamiento de Grid Items</h2>
   <a href="#top">🔝</a>
-  <section class="container grid-align"></section>
+  <section class="container grid-align">
+    <article class="item">
+        <p>Grid Item 1</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 2</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 3</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 4</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 5</p>
+    </article>
+  </section>
+
+
   <h2 id="grid-align-tracks">Alineamiento de Grid Tracks</h2>
   <a href="#top">🔝</a>
-  <section class="container grid-align-tracks"></section>
+  <section class="container grid-align-tracks">
+    <article class="item">
+        <p>Grid Item 1</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 2</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 3</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 4</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 5</p>
+    </article>
+  </section>
+
+
   <h2 id="grid-min-max">Tamaños Máximos y Mínimos de Grid Tracks</h2>
   <a href="#top">🔝</a>
-  <section class="container grid-min-max"></section>
+  <section class="container grid-min-max">
+    <article class="item">
+        <p>Grid Item 1</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 2</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 3</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 4</p>
+    </article>
+    <article class="item">
+        <p>Grid Item 5</p>
+    </article>
+  </section>
+
+
   <h2 id="grid-repeat">Grid con Patrones Repetitivos</h2>
   <a href="#top">🔝</a>
-  <section class="container grid-repeat"></section>
+  <section class="container grid-repeat">
+      <article class="item">
+          <p>Grid Item 1</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 2</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 3</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 4</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 5</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 6</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 7</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 8</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 9</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 10</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 11</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 12</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 13</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 14</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 15</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 16</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 17</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 18</p>
+      </article>
+      <article class="item">
+          <p>Grid Item 19</p>
+      </article>
+  </section>
+
+
   <h2 id="grid-dynamics">Grids Dinámicas</h2>
   <a href="#top">🔝</a>
   <section class="container grid-dynamics"></section>
