--- a/6.-css-avanzado/3.-transitions-examples/example2.html
+++ b/6.-css-avanzado/3.-transitions-examples/example2.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="example2.css">
 </head>
 <body>
-    
+
+    <h1 class="title">Transitions Examples 2</h1>
+    <h2 class="title">Buttons</h2>
+    <div class="buttons">
+        <button class="button button--fill">Hover me</button>
+        <button class="button button--cross">Hover me</button>
+        <button class="button button--grow">Hover me</button>
+        <button data-content="Hover Me" class="button button--scale-text">Hover me</button>
+        <button class="button button--shiney">Hover me</button>
+    </div>
     
 
 </body>
